# Video-AI-Segmenter

./: .gitignore  README.md  product-thinking.md
backend/: pyproject.toml  run_analysis.py
backend/app/: config.py  main.py
backend/app/api/: admin.py  analyze.py  results.py  upload.py  video_list.py  videos_from_url.py
backend/app/schemas/: api_schemas.py
backend/app/services/: ai_model.py  ai_model_gemini.py  upload_video_from_link.py
backend/db/analysis_results/: distractor_battery.mov.analysis.json  distractor_tape.mov.analysis.json  frog.mov.analysis.json  reactive_cup.mov.analysis.json  teleop_all.mp4.analysis.json
backend/tests/: test_ai_model.py  test_upload_video_from_link.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.storybook/: preview.ts
frontend/src/app/: RestoreRole.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/app/videos/: page.tsx
frontend/src/components/admin/: AdminPanel.tsx  FileUploader.tsx  LinkExtractor.tsx  VideoList.tsx
frontend/src/components/reviewer/: ReviewerPanel.tsx
frontend/src/components/role/: RoleToolbar.tsx
frontend/src/components/ui/: ActionButtons.tsx  TagButton.tsx  TagSelector.tsx  TimeSegmentTable.tsx
frontend/src/components/video/: AnalysisResultTable.tsx  AnalysisTable.tsx  ModelSelector.tsx  VideoListItem.tsx  VideoPlayer.tsx
frontend/src/redux/: roleSlice.ts  store.ts
frontend/src/utils/: adminHelpers.ts  analysisHelpers.ts  reviewerHelpers.ts
(+14 files in other folders)
